tests/errors/name-typo/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0100]: Name `lenght` is not defined.
  │
  ├─𜱶 help: did you mean `length`?
  │
3 │ def main = lenght
  │            ^^^^^^
  ╰─𜱶 tests/errors/name-typo/main.pa:3:12
